<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpaceNewsUpdates">


    <Button
        android:id="@+id/link_a"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:backgroundTint="#010355"
        android:fontFamily="monospace"
        android:text="@string/title_a"
        app:layout_constraintBottom_toTopOf="@+id/link_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/link_b"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:backgroundTint="#0F2C81"
        android:fontFamily="monospace"
        android:text="@string/title_b"
        app:layout_constraintBottom_toTopOf="@+id/link_c" />

    <Button
        android:id="@+id/link_c"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:backgroundTint="#010355"
        android:fontFamily="monospace"
        android:text="@string/title_c"
        app:layout_constraintBottom_toTopOf="@+id/link_d" />

    <Button
        android:id="@+id/link_d"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:backgroundTint="#0F2C81"
        android:fontFamily="monospace"
        android:text="@string/title_d"
        app:layout_constraintBottom_toTopOf="@+id/link_e" />

    <Button
        android:id="@+id/link_e"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:backgroundTint="#010355"
        android:fontFamily="monospace"
        android:text="@string/title_e"
        app:layout_constraintBottom_toTopOf="@+id/link_more" />

    <Button
        android:id="@+id/link_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:fontFamily="monospace"
        android:text="READ MORE..."
        app:layout_constraintTop_toBottomOf="@id/link_e" />

</androidx.constraintlayout.widget.ConstraintLayout>